# calc-mlir-tutorial

./: .bazelrc  .gitignore  LICENSE  MODULE.bazel  README.md
common/: BUILD.bazel  check_dialect_registered.sh  run_filecheck.sh  run_jit.sh  run_verify_diagnostics.sh  test.bzl
stage00-hello-mlir/: README.md
stage00-hello-mlir/code/: BUILD.bazel  hello.mlir
stage00-hello-mlir/solutions/: hello.mlir
stage01-empty-dialect/: README.md
stage01-empty-dialect/code/: BUILD.bazel  CalcDialect.cpp  CalcDialect.h  CalcDialect.td  calc_opt.cpp
stage01-empty-dialect/solutions/: BUILD.bazel  CalcDialect.td  calc_opt.cpp
stage02-first-op/: README.md
stage02-first-op/code/: BUILD.bazel  CalcDialect.h  CalcDialect.td  calc_opt.cpp  round_trip.mlir
stage02-first-op/solutions/: BUILD.bazel  CalcDialect.cpp  CalcDialect.h  CalcDialect.td  round_trip.mlir
stage03-more-ops/: README.md
stage03-more-ops/code/: CalcDialect.td  round_trip.mlir
stage03-more-ops/solutions/: BUILD.bazel  CalcDialect.td  round_trip.mlir
stage04-side-effects/: README.md
stage04-side-effects/code/: CalcDialect.cpp  CalcDialect.td  round_trip.mlir
stage04-side-effects/solutions/: BUILD.bazel  CalcDialect.h  CalcDialect.td
stage05-verifiers/: README.md
stage05-verifiers/code/: CalcDialect.cpp  CalcDialect.td
stage05-verifiers/solutions/: BUILD.bazel  CalcDialect.cpp  CalcDialect.td
stage06-canonicalization/: README.md
stage06-canonicalization/code/: BUILD.bazel  CalcDialect.cpp  CalcDialect.h  CalcDialect.td  CalcPatterns.td  canonicalize.mlir
stage06-canonicalization/solutions/: CalcDialect.cpp  CalcDialect.td  verify.mlir
stage07-folders/: README.md
stage07-folders/code/: BUILD.bazel  CalcDialect.cpp  CalcDialect.h  CalcDialect.td  calc_opt.cpp  round_trip.mlir
stage08-custom-pass/: README.md
stage08-custom-pass/code/: BUILD.bazel  CalcDialect.td  CalcPasses.cpp  CalcPasses.td  calc_opt.cpp  fold.mlir
stage08-custom-pass/solutions/: CalcPasses.cpp  CalcPasses.h  CalcPasses.td
stage09-arith-conversion/: README.md
stage09-arith-conversion/code/: BUILD.bazel  CalcPasses.cpp  CalcPasses.td
stage09-arith-conversion/solutions/: CalcPasses.cpp  CalcPasses.h  CalcPasses.td  calc_opt.cpp
stage10-llvm-conversion/: README.md
stage10-llvm-conversion/code/: BUILD.bazel  CalcPasses.cpp  CalcPasses.td  print_to_llvm.mlir
stage10-llvm-conversion/solutions/: CalcDialect.cpp  CalcPasses.cpp  CalcPasses.td  CalcPatterns.td  calc_to_arith.mlir  dce.mlir  full_pipeline.mlir  strength_reduce.mlir
stage11-jit-execution/: README.md
stage11-jit-execution/code/: BUILD.bazel  jit.mlir
stage11-jit-execution/solutions/: jit.mlir
stage12-custom-type/: README.md
stage12-custom-type/code/: CalcDialect.cpp  CalcDialect.td  fixed_round_trip.mlir  fixed_verify.mlir
stage12-custom-type/solutions/: BUILD.bazel  CalcDialect.cpp  CalcDialect.h  CalcDialect.td  CalcPasses.h
