load("@llvm-project//mlir:tblgen.bzl", "gentbl_cc_library", "td_library")
load("//common:test.bzl", "mlir_filecheck_test", "mlir_verify_diagnostics_test")

td_library(
    name = "CalcDialectTdFiles",
    srcs = ["CalcDialect.td"],
    deps = [
        "@llvm-project//mlir:InferTypeOpInterfaceTdFiles",
        "@llvm-project//mlir:OpBaseTdFiles",
        "@llvm-project//mlir:SideEffectInterfacesTdFiles",
    ],
)

gentbl_cc_library(
    name = "CalcDialectIncGen",
    strip_include_prefix = ".",
    tbl_outs = [
        (["-gen-dialect-decls"], "CalcDialect.h.inc"),
        (["-gen-dialect-defs"], "CalcDialect.cpp.inc"),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = "CalcDialect.td",
    deps = [":CalcDialectTdFiles"],
)

gentbl_cc_library(
    name = "CalcOpsIncGen",
    strip_include_prefix = ".",
    tbl_outs = [
        (["-gen-op-decls"], "CalcOps.h.inc"),
        (["-gen-op-defs"], "CalcOps.cpp.inc"),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = "CalcDialect.td",
    deps = [":CalcDialectTdFiles"],
)

cc_library(
    name = "CalcDialect",
    srcs = ["CalcDialect.cpp"],
    hdrs = ["CalcDialect.h"],
    deps = [
        ":CalcDialectIncGen",
        ":CalcOpsIncGen",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:InferTypeOpInterface",
        "@llvm-project//mlir:SideEffectInterfaces",
    ],
)

cc_binary(
    name = "calc-opt",
    srcs = ["calc_opt.cpp"],
    deps = [
        ":CalcDialect",
        "@llvm-project//mlir:AllPassesAndDialects",
        "@llvm-project//mlir:MlirOptLib",
    ],
)

mlir_filecheck_test(
    name = "round_trip_test",
    src = "round_trip.mlir",
    mlir_opt = ":calc-opt",
)

# DCE test: --canonicalize must remove the unused calc.add but keep calc.print.
mlir_filecheck_test(
    name = "dce_test",
    src = "dce.mlir",
    mlir_opt = ":calc-opt",
    mlir_opt_args = ["--canonicalize"],
)

# Verify-diagnostics test: ShrOp::verify() should fire on out-of-range
# shift amounts and stay silent on valid ones.
mlir_verify_diagnostics_test(
    name = "verify_test",
    src = "verify.mlir",
    mlir_opt = ":calc-opt",
)
